--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -75,7 +75,9 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.1.0",
     "eslint-plugin-unicorn": "^49.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
+    "jest-config": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
