--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "packageManager": "pnpm@8.15.6",
   "pnpm": {
     "overrides": {
-      "react-test-renderer": "18.2.0"
+      "react-test-renderer": "18.2.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
     }
   }
 }
