--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,12 +7,17 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.19.0"
+  },
+  "peerDependencies": {
     "@mantine/core": "^8.3.6",
-    "@tabler/icons-react": "^3.19.0",
-    "react": "^18.3.1"
+    "@mantine/hooks": "^8.3.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "^5.4.5"
   }
 }
