--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,17 @@ jobs:
         run: pnpm test:coverage --passWithNoTests
         continue-on-error: true
 
+      - name: Check coverage threshold
+        run: |
+          if [ -f coverage/coverage-summary.json ]; then
+            COVERAGE=$(cat coverage/coverage-summary.json | jq '.total.lines.pct')
+            echo "Line coverage: $COVERAGE%"
+            if (( $(echo "$COVERAGE < 90" | bc -l) )); then
+              echo "Coverage below 90% threshold"
+            fi
+          fi
+        continue-on-error: true
+
       - name: Upload coverage
         uses: actions/upload-artifact@v4
         if: success()
@@ -170,6 +181,14 @@ jobs:
 
       - name: Test
         run: cd packages/core-rs && cargo test --verbose
+        continue-on-error: true
+
+      - name: Generate test coverage (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          cd packages/core-rs
+          cargo install cargo-tarpaulin --version 0.27.0 || true
+          cargo tarpaulin --out Xml --skip-clean --timeout 300 || true
         continue-on-error: true
 
   desktop_build:
